fixtures/runtime/invalid/type-error.php
<?php
// phase4: kind=invalid expected_rust_status=runtime_error
echo "abc" + 1;
